# better_class_api

./: Cargo.toml  readme.md
migrations/2022-03-27-122713_create_users/: up.sql
src/: db.rs  handlers.rs  main.rs
src/db/: models.rs  schema.rs
src/users/: handlers.rs  routes.rs
