[package]
name = "better_class_api"
version = "0.1.0"
edition = '2021'
authors = ["Niyongabo <niyongaboeric69@gmail.com>"]

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
uuid = "0.8"
rocket = "0.5.0-rc.1"
serde = "1.0"
serde_json = "1.0.79"
serde_derive = "1.0.136"
actix-web = "3.0.0"
actix-rt = "1.0"
futures = "0.3.21"
env_logger = "0.9"
r2d2 = "0.8.9"
listenfd = "0.5.0"
chrono = { version = "0.4.10", features = ["serde"] }

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"